--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@
 
 body {
     background-color: #06191D;
+    
 }
 
 #logo-container{
@@ -145,8 +146,52 @@ body {
     background-size: 190%;
     color: #DECD9C;
 	text-shadow: 0px 4px 4px #000000;
+    font-family: "Montserrat", sans-serif;
+}
+/*Aceites esceniales*/
+
+.aceites{
+    font-family: "Montserrat", sans-serif;
+    color:#fff ;
+    padding: 1px;
     
 }
+
+.aceites-ttl{
+    text-align: center;
+}
+
+#product-container-a {
+    display: grid;
+    grid-template-columns: 1fr 1fr; /* Two equal columns */
+    grid-template-rows: auto auto; /* Two rows, adjust 'auto' as needed */
+    gap: 30px; /* Adjust the gap between columns */
+    margin: 60px;
+}
+
+#product-container-a div {
+    text-align: center; /* Center the content within each column */
+}
+
+#product-container-a img {
+    max-height: 200px; /* Adjust the height as needed */
+    width: auto; /* Maintain aspect ratio */
+    z-index: 1; /* Ensure the image is above the background */
+}
+
+#product-container-a img:hover{
+    transform: scale(1.15);
+}
+
+#product-container-a .image-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color:rgba(0, 0, 0, .25); /* Grey background color */
+    height: 70%; 
+    width: 100%;
+}
+
 /* Larger devices (laptops and desktops, 992px and up)*/
 @media screen and (min-width: 992px) {
 
@@ -160,6 +205,15 @@ body {
         text-shadow: 0px 6px 6px #000000;
         
     }
+
+    #product-container-a {
+        grid-template-columns: repeat(5, 1fr); /* Five equal columns */
+        grid-template-rows: auto auto; /* Two rows, adjust 'auto' as needed */
+    }
+    #product-container-a .image-container {
+
+        height: 70%; 
+        width: 70%;
 
     #social-networks{
         font-size: 30px;
