--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,9 +11,24 @@
 
 body {
     background-color: #06191D;
-    
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
 }
 
+.navbar {
+    margin-bottom: 0;
+    width: 100vw; /* Change width to viewport width */
+    background-color: rgba(0, 0, 0, .25);
+    border: 0;
+    padding: 10px 0; /* Adjust padding as needed */
+}.navbar {
+    margin-bottom: 0;
+    width: 100vw; /* Change width to viewport width */
+    background-color: rgba(0, 0, 0, .25);
+    border: 0;
+    padding: 10px 0; /* Adjust padding as needed */
+}
 #logo-container{
     display: flex;
     justify-content: center;
@@ -250,7 +265,7 @@ body {
 .callout-a{
     background-color: #217d9e89;
     background-image: url('../images/bg-romero-bg.jpg');
-    background-size: 120%;
+    background-size: cover;
 	
 }
 
@@ -259,8 +274,23 @@ body {
     color:#fafafa;
     text-shadow: 0px 4px 4px #000000;
     font-family: "Montserrat", sans-serif;
+    
 }
 
+.text-p{
+    color: #d7c181;
+    text-align: center;
+    background-color:rgba(0, 0, 0, 0.25);;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    padding: 30px;
+}
+
+#sobre-nosotros-img {
+    width: 100%; /* Make the image fill the container */
+    height: auto; /* Maintain the aspect ratio */
+
+}
 /* Larger devices (laptops and desktops, 992px and up)*/
 @media screen and (min-width: 992px) {
 
@@ -297,6 +327,11 @@ body {
         #pasta-dental,
         #desodorante {
             width: 150px;
+        }
+
+        #sobre-nosotros-img {
+            max-width: 100%; /* Adjust the width as needed for smaller screens */
+            height: auto; /* Maintain the aspect ratio */
         }
 
     #social-networks{
