--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,7 +76,7 @@ body {
 }
 
 #derechos{
-    color:#fff;
+    color:#06191D;
     text-align: center;
     margin: 0px;
     font-size: x-small;
@@ -100,6 +100,23 @@ body {
 
 .fa-brands:hover {
     transform: scale(1.15); /* Increase the size by 5% */
+}
+
+.fa-whatsapp{
+    position:fixed;
+    width: 75px;
+    height: 30px;
+    line-height: 55px;
+    bottom: 30px;
+    right:30px;
+    padding-bottom: 60px;
+    background-color: #0df053;
+    color:#fff;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 40px;
+    box-shadow: 0px 1px 10px rgba(0,0,0,0.3);
+    z-index:  100;
 }
 
 /* Navbar */
@@ -375,6 +392,23 @@ body {
         background-size: 110%;  
         text-shadow: 0px 6px 6px #000000;
         
+    }
+
+    .fa-whatsapp{
+        position:fixed;
+        width: 90px;
+        height: 75px;
+        line-height: 55px;
+        bottom: 50px;
+        right:50px;
+        padding-bottom: 70px;
+        background-color: #0df053;
+        color:#fff;
+        border-radius: 50px;
+        text-align: center;
+        font-size: 50px;
+        box-shadow: 0px 1px 10px rgba(0,0,0,0.3);
+        z-index:  100;
     }
 
     .product-container-a {
