--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -381,14 +381,31 @@ body {
 }
 
 /*Modal*/
+/* Custom CSS for modal title background color */
+.modal-header {
+    background-color: #d7c181;
+    color: #06191D; /* Set text color to make it readable on the background */
+    font-weight:900;
+
+}
+
+#productModal .modal-body .modal-price {
+    font-weight: bold;
+    font-size: larger;
+}
+
 #productModal .modal-body {
     font-size: 14px; /* Adjust the font size as needed */
     line-height: 1.6; /* Adjust the line height as needed */
+    font-weight: 600;
+    text-align: justify;
 }
 
 #productModal .modal-additional-info {
     margin-top: 10px; /* Adjust the top margin as needed */
 }
+
+
 
 /* Larger devices (laptops and desktops, 992px and up)*/
 @media screen and (min-width: 992px) {
