--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -358,6 +358,10 @@ body {
     transition: all 0.3s ease-in-out;
 }
 
+textarea{
+    height: 200px;
+}
+
 #form input:hover,
 #form textarea:hover {
     background: rgba(255, 255, 255, 0.3); /* Slightly increase transparency on hover */
